--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+# Ignore the build directory
+build
+
+# Ignore the coverage directory
+coverage
+
+# Ignore the dist directory
+dist
+
+# Ignore the node_modules directory
 node_modules
+
 # Keep environment variables out of version control
 .env
+
+# Ignore log files
+/uploads
