--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon --exec ts-node src/server.ts",
+    "start": "yarn build && npx prisma generate && node dist/server.js",
     "build": "tsc",
     "dev": "nodemon --exec ts-node src/server.ts"
   },
