--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.30",
-    "nodemon": "^3.1.0",
+    "nodemon": "^3.1.4",
     "prisma": "5.6.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
@@ -27,6 +28,7 @@
     "@types/multer": "^1.4.11",
     "@types/uuid": "^9.0.8",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
