--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "npm run prisma:generate && npm run prisma:push && node dist/server.js",
+    "start": "npm run build && npm run prisma:generate && npm run prisma:push && node dist/server.js",
     "prisma:generate": "npx prisma generate",
     "prisma:push": "npx prisma db push",
     "dev": "nodemon src/server.ts"
